fix: changed spacing

--- a/app/components/ContactSection/ContactSection.module.scss
+++ b/app/components/ContactSection/ContactSection.module.scss
@@ -146,8 +146,8 @@
 @media (max-width: 900px) {
     .container {
         border: none;
-        margin: 66px 0px 48px 0px;
-        padding: 0px 16px;
+        margin: 0px 0px 48px 0px;
+        padding: 90px 16px 0px 16px;
     }
 
     .contactLeftLines {
